<resources>
    <string name="app_name">FixserMobileApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_test">MainActivityTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="statistique_vente">Statistiques</string>
    <string name="card_menu_title">Acceuil</string>
    <string name="search_title">Search data</string>

    <string name="libelle">Libelle</string>
    <string name="quantite">Quantite</string>
    <string name="pri_unit">Coût Depense</string>
    <string name="frais">Ajout Frais</string>
    <string name="date_expense">Date Depense</string>
    <string name="valider">Valider</string>
    <string name="title_activity_enter">EnterActivity</string>
    <string name="designation">Designation</string>
    <string name="select_four">Selctionner un Fournisseur</string>
    <string name="addcost_enter">Ajout Frais Entrer</string>
    <string name="pays_origine">Pays d\'origine</string>
    <string name="montant_total">Montant Total</string>
    <string name="ajouter_produit">Ajouter un produit</string>
    <string name="close">Fermer</string>
    <string name="delete">Supprimer</string>
    <string name="amountPay">Montant Payer</string>
    <string name="add_fresh">Ajouter des frais</string>
    <string name="amountFresh">Montant Frais</string>
    <string name="update">Update</string>
    <string name="afficher_tous_les_frais">Afficher tous les frais</string>
    <string name="afficher_tous_les_paiement">Afficher tous les paiements</string>

    <string name="typeHangard">Hangard</string>
    <string name="add_payment">Ajouter un payement</string>
    <string name="amountRest">Montant Restant:</string>
</resources>