<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/purple_200"
        android:elevation="20dp"
        app:cardElevation="25dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_round_mediumbottom_left_right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:text="@string/ajouter_produit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/big_text"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btn_close_listprod_enter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/close"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:src="@drawable/ic_baseline_close_24" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/edt_designation_prod_enter"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_sortie"
                    android:hint="@string/designation" />

                <EditText
                    android:id="@+id/edt_qte_prod_enter"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_sortie"
                    android:hint="@string/quantite"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/edt_pu_prod_enter"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_sortie"
                    android:hint="@string/pri_unit"
                    android:inputType="number"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:text="@string/montant_total"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_montanttot_prod_enter"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text=""
                    android:textSize="@dimen/medium_text"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_itemprod_enter"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:drawableEnd="@drawable/ic_baseline_check_24"
                    android:text="@string/valider" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_item_prod_botmsheet_enter"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</RelativeLayout>