<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        app:cardElevation="25dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_round_mediumbottom_left_right"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:text="@string/add_fresh"
                        android:textColor="@color/white"
                        android:textSize="@dimen/big_text"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btn_close_addFreshEnter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/close"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:src="@drawable/ic_baseline_close_24" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/edt_designation_freshExpense"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_baseline_info_24"
                    android:hint="@string/designation" />

                <EditText
                    android:id="@+id/edt_amountFreshExpense"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_baseline_money_24"
                    android:hint="@string/amountFresh"
                    android:inputType="number" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="@dimen/edt_marg_top"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_addFreshExpense"
                        style="@style/ButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableEnd="@drawable/ic_baseline_check_24"
                        android:text="@string/valider" />

                    <Button
                        android:id="@+id/btn_updateFreshExpense"
                        style="@style/ButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/edt_marg_start"
                        android:drawableEnd="@drawable/ic_baseline_check_24"
                        android:text="@string/update" />
                </LinearLayout>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcv_freshExpense"
                    android:layout_margin="@dimen/edt_marg_top"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </androidx.recyclerview.widget.RecyclerView>
            </LinearLayout>
        </ScrollView>


    </androidx.cardview.widget.CardView>

</RelativeLayout>