<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:text="@string/add_payment"
                        android:textColor="@color/black"
                        android:textSize="@dimen/big_text"
                        android:textStyle="bold" />

                    <ImageButton
                        android:id="@+id/btn_closeAddPaiExp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/close"
                        android:focusable="true"
                        android:foreground="?attr/selectableItemBackground"
                        android:padding="@dimen/edt_paddin_sta_end"
                        android:src="@drawable/ic_baseline_close_24" />
                </RelativeLayout>


                <EditText
                    android:id="@+id/edtDatePayExp"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                    android:focusable="false"
                    android:inputType="datetime" />

                <EditText
                    android:id="@+id/edtAmountPayExp"
                    style="@style/myform_style"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:drawableStart="@drawable/ic_baseline_money_24"
                    android:hint="@string/amountPay"
                    android:inputType="number" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/marg_top10"
                    android:layout_marginTop="@dimen/marg_top10"
                    android:layout_marginEnd="@dimen/marg_top10"
                    android:layout_marginBottom="@dimen/marg_top10"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/itemPadding"
                        android:text="@string/amountRest"
                        android:textAlignment="textStart"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtRestAmountExp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/itemPadding"
                        android:text="@string/amountRest"
                        android:textAlignment="textStart"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/black"
                        android:textSize="@dimen/medium_text"
                        android:textStyle="bold" />

                </LinearLayout>


                <Button
                    android:id="@+id/btnAddExpPay"
                    style="@style/ButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/marg_top10"
                    android:drawableEnd="@drawable/ic_baseline_check_24"
                    android:text="@string/valider" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </ScrollView>
</RelativeLayout>