<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    style="@style/CardViewStyleItemSelectProd"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_design_expense_fresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/designation"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rly_fresh_expense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_design_expense_fresh"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_select_amountFresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/amountFresh"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_amount_freshExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txt_select_amountFresh"
                android:padding="5dp"
                android:text="200"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/ibtn_delet_itemExpenseFresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/black"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_close_24">

        </ImageButton>
    </RelativeLayout>

</androidx.cardview.widget.CardView>