<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="5dp"
    style="@style/CardViewStyleItemSelectProd"
    android:background="?selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<TextView
            android:id="@+id/txt_select_enterprod1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="5dp"
            android:text="@string/designation"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />-->

        <TextView
            android:id="@+id/txt_design_addprod_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="5dp"
            android:text="@string/designation"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rly_select_enterprod3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_design_addprod_enter"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_select_enterprod2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:padding="5dp"
                android:text="@string/quantite"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_qte_addprod_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txt_select_enterprod2"
                android:padding="5dp"
                android:text="200"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_select_enterprod3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toEndOf="@+id/txt_qte_addprod_enter"
                android:padding="5dp"
                android:text="@string/pri_unit"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pu_addprod_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txt_select_enterprod3"
                android:padding="5dp"
                android:text="30 000 000"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_below="@+id/rly_select_enterprod3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/txt_select_enterprod4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:padding="5dp"
                android:text="@string/montant_total"
                android:textColor="@color/black"
                android:textSize="@dimen/medium_text"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_total_addprod_enter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/txt_select_enterprod4"
                android:padding="5dp"
                android:text="@string/montant_total"
                android:textColor="@color/black"
                android:textSize="@dimen/big_text"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/ibtn_delet_itemprod_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@color/black"
            android:contentDescription="@string/delete"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_close_24">

        </ImageButton>
    </RelativeLayout>

</androidx.cardview.widget.CardView>