<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".expenses.AddExpenseActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_menu_add_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_app_bar_notradius"
        android:theme="@style/Theme.FixserMobileApp.AppBarOverlay"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_menu_add_expense"
            android:layout_width="match_parent"
            android:background="@drawable/shape_app_bar_notradius"
            android:layout_height="?attr/actionBarSize" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_below="@+id/app_bar_menu_add_expense"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/lny1_add_expense"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/shape_roundbottom_left_right"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:text="Total Depense:"
                    android:textColor="@color/red_color"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:text="1 500 000 GNF"
                    android:textColor="@color/red_color"
                    android:textSize="@dimen/big_text"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/lny1_add_expense"
                android:orientation="vertical">

                <!--invoke the background as the
                    custom_edit_text_rounded-->
                <EditText
                    android:id="@+id/libelle_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:background="@drawable/edit_text_rounded"
                    android:drawableStart="@drawable/ic_sortie"
                    android:drawablePadding="@dimen/edt_paddin_draw"
                    android:hint="@string/libelle"
                    android:paddingStart="@dimen/edt_paddin_sta_end"
                    android:paddingEnd="@dimen/edt_paddin_sta_end"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/quantite_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:background="@drawable/edit_text_rounded"
                    android:drawableStart="@drawable/ic_parameter"
                    android:drawablePadding="@dimen/edt_paddin_draw"
                    android:hint="@string/quantite"
                    android:paddingStart="@dimen/edt_paddin_sta_end"
                    android:paddingEnd="@dimen/edt_paddin_sta_end"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/pu_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:background="@drawable/edit_text_rounded"
                    android:drawableStart="@drawable/ic_parameter"
                    android:drawablePadding="@dimen/edt_paddin_draw"
                    android:hint="@string/pri_unit"
                    android:inputType="numberDecimal"
                    android:paddingStart="@dimen/edt_paddin_sta_end"
                    android:paddingEnd="@dimen/edt_paddin_sta_end"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/frais_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:background="@drawable/edit_text_rounded"
                    android:drawableStart="@drawable/ic_parameter"
                    android:drawablePadding="@dimen/edt_paddin_draw"
                    android:hint="@string/frais"
                    android:inputType="number"
                    android:paddingStart="@dimen/edt_paddin_sta_end"
                    android:paddingEnd="@dimen/edt_paddin_sta_end"
                    android:textColor="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/marg_top10"
                    android:text="Type depense"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold">

                </TextView>

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginEnd="@dimen/edt_marg_start" />

                <EditText
                    android:id="@+id/date_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/edt_addexpense_height"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:background="@drawable/edit_text_rounded"
                    android:drawableStart="@drawable/ic_parameter"
                    android:drawablePadding="@dimen/edt_paddin_draw"
                    android:hint="@string/date_expense"
                    android:inputType="date"
                    android:paddingStart="@dimen/edt_paddin_sta_end"
                    android:paddingEnd="@dimen/edt_paddin_sta_end"
                    android:textColor="@color/black" />

                <Button
                    android:id="@+id/btn_add_expense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/edt_marg_start"
                    android:layout_marginTop="@dimen/edt_marg_top"
                    android:layout_marginEnd="@dimen/edt_marg_start"
                    android:drawableStart="@drawable/ic_parameter"
                    style="@style/ButtonStyle"
                    android:text="@string/valider" />
            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</RelativeLayout>